Register working, login send coredentials with get

--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -1,8 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello UserController!{% endblock %}
+{% block title %}Registrar-se{% endblock %}
 
 {% block body %}
+<h2>Registrar-se</h2>
 <div>
 {{form(form)}}
 </div>
