--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,19 +15,25 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary custom-navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Projecte tasquest</a>
+        <a class="navbar-brand">Projecte tasquest</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
-            </li>
             {% if app.user %}
-                <li class="nav-item text-white position-absolute end-0">
-                    Benvingut {{ app.user.username }}! <a class="btn btn-danger mx-2" href="{{ path('logout') }}">Logout</a>
-                </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/tasks">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Les meves tasques</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="task/create">Crear tasca</a>
+              </li>
+              <li class="nav-item text-white position-absolute end-0">
+                  Benvingut {{ app.user.username }}! <a class="btn btn-danger mx-2" href="{{ path('logout') }}">Logout</a>
+              </li>
             {% else %}
               <li class="nav-item">
                 <a class="nav-link" href="register">Registrar-se</a>
