--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary custom-navbar">
       <div class="container-fluid">
-        <a class="navbar-brand">Projecte tasquest</a>
+        <a class="navbar-brand">Projecte tasklist</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,10 +26,10 @@
                 <a class="nav-link" aria-current="page" href="/tasks">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Les meves tasques</a>
+                <a class="nav-link" href="/mytasks">Les meves tasques</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="task/create">Crear tasca</a>
+                <a class="nav-link" href="/task/create">Crear tasca</a>
               </li>
               <li class="nav-item text-white position-absolute end-0">
                   Benvingut {{ app.user.username }}! <a class="btn btn-danger mx-2" href="{{ path('logout') }}">Logout</a>
@@ -39,7 +39,7 @@
                 <a class="nav-link" href="register">Registrar-se</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="login">Iniciar sessió</a>
+                <a class="nav-link" href="/">Iniciar sessió</a>
               </li>
             {% endif %}
         </div>
@@ -56,7 +56,7 @@
     </div>
     {% block footer %}
     <div class="text-center p-3 bg-primary text-light custom-footer">
-    Copyright © 2022 "Projecte tasques" una empresa de Eric Roca Inc. Tots els drets reservats.
+    Copyright © 2022 "Projecte tasklist" una empresa de Eric Roca Inc. Tots els drets reservats.
     </div>
     {% endblock %}
     {% block javascripts %}
